src/test/deca/etapeB/valid/class_decl/field_public_int_initialized.deca
// Description:
//    Déclaration d'une classe avec un attribut int
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

{

}

class {
	public int a = 5;
}
