src/test/deca/etapeB/invalid/assign_float_in_int.deca
// Description:
//    Tentative d'affection d'un float à un int
//
// Resultats:
//    Bad assignement
// 
// Historique:
//    cree le 01/01/2016

{
    int a;
    float b;
    a = b;
}
